Add update methodo to User
